Designed contact page

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='index.css' , rel='stylesheet'>
   <link href = 'contact.css', rel = 'stylesheet'>
+  <script src="https://kit.fontawesome.com/d532ba5b74.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,6 +25,14 @@
     </ul>
   </div>
 
-  <div>
+  <div id = 'links'>
+    <!-- <img src = 'https://images.unsplash.com/photo-1528747045269-390fe33c19f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80'> -->
+    <h1>Let's Talk</h1>
+    <ul>
+      <li><i class="fa-brands fa-linkedin"></i>: <a href="www.linkedin.com/in/sanket-munishwar-372607230">www.linkedin.com/in/sanket-munishwar-372607230</a></li>
+      <li><i class="fa-solid fa-envelope"></i>: <a href = "mailto:sanketmunishwar@gmail.com">sanketmunishwar@gmail.com</a></li>
+      <li><i class="fa-regular fa-file"></i>: <a href = "CV-sanket-munishwar.pdf" download>CV</a></li>
+      <li><i class="fa-brands fa-github"></i>: <a href = "https://github.com/SAM1300"> Github</a></li>
+    </ul>
     
   </div>
