Deleted project tab

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <ul>
       <li class='item'><a href = 'index.html'>About</a></li>
       <li class='item'><a href = 'contact.html'>Contact Me</a></li>
-      <li class="item"><a href = 'Projects.html'>Projects</a></li>
     </ul>
   </div>
   
@@ -29,7 +28,7 @@
     <p>I am BS-MS (Physics Major) graduate from Indian Institute of Science Education and Research (IISER) Tirupati, Andhra Pradesh. My home town is Nagpur, Maharashtra.
       I graduated recently in July 2023 and looking for Web Developer or Data Analyst Job. I can comfortably work with Python libraries like Numpy, Pandas, Scikit-Learn and 
       a Python web development framework Django. My master's thesis was in the field of Gravitational Wave Data Analysis, at IIT Gandhinagar. I was using Bayesian statistics and signal processing method (matched filtering) as a part my master's thesis work.
-      Please checkout my Github to see the projects I am doing (or have completed). The link to my CV, Github, LinkedIn and Instagram is given in <strong>Contact Me</strong> section.
+      Please checkout my Github to see the projects I am doing (or have completed). The link to my CV, Github, LinkedIn is given in <strong>Contact Me</strong> section.
     </p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
