--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
     <ul>
       <li class='item'><a href = 'index.html'>About</a></li>
       <li class='item'><a href = 'contact.html'>Contact Me</a></li>
+      <li class="item"><a href = "projects.html">Projects</li>
     </ul>
   </div>
 
@@ -30,7 +31,7 @@
     <ul>
       <li><i class="fa-brands fa-linkedin"></i>: <a href="www.linkedin.com/in/sanket-munishwar-372607230">www.linkedin.com/in/sanket-munishwar-372607230</a></li>
       <li><i class="fa-solid fa-envelope"></i>: <a href = "mailto:sanketmunishwar@gmail.com">sanketmunishwar@gmail.com</a></li>
-      <li><i class="fa-regular fa-file"></i>: <a href = "CV-sanket-munishwar.pdf" download>CV</a></li>
+      <li><i class="fa-regular fa-file"></i>: <a href = "Sanket_Munishwar_Job.pdf" download>CV</a></li>
       <li><i class="fa-brands fa-github"></i>: <a href = "https://github.com/SAM1300"> Github</a></li>
     </ul>
     
