--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul>
       <li class='item'><a href = 'index.html'>About</a></li>
       <li class='item'><a href = 'contact.html'>Contact Me</a></li>
+      <li class="item"><a href = 'projects.html'>Projects</a></li>
     </ul>
   </div>
   
@@ -26,7 +27,7 @@
     <h1><strong>Hi, I'm Sanket Ajay Munishwar</strong></h1>
     <img src="website_img.jpg">
     <p>I am BS-MS (Physics Major) graduate from Indian Institute of Science Education and Research (IISER) Tirupati, Andhra Pradesh. My home town is Nagpur, Maharashtra.
-      I graduated recently in July 2023 and looking for Web Developer or Data Analyst Job. I can comfortably work with Python libraries like Numpy, Pandas, Scikit-Learn and 
+      I graduated recently in July 2023 and looking for a Web Developer or  a Data Analyst Job. I can comfortably work with Python libraries like Numpy, Pandas, Scikit-Learn and 
       a Python web development framework Django. My master's thesis was in the field of Gravitational Wave Data Analysis, at IIT Gandhinagar. I was using Bayesian statistics and signal processing method (matched filtering) as a part my master's thesis work.
       Please checkout my Github to see the projects I am doing (or have completed). The link to my CV, Github, LinkedIn is given in <strong>Contact Me</strong> section.
     </p>
