Modified project html

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
           <li><strong>Skills used:</strong> HTML, CSS, Javascript, Django</li>
         </ul>
       </span></p>
-      <a href="https://github.com/SAM1300/Protein-Master-Toolkit"></a>
+      <a href="https://github.com/SAM1300/Protein-Master-Toolkit" class="card-link web-link">Link to the Project</a>
     </div>
   </div>
 
