--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,11 @@
     <ul>
       <li class='item'><a href = 'index.html'>About</a></li>
       <li class='item'><a href = 'contact.html'>Contact Me</a></li>
-      <li class="item"><a href = "projects.html">Projects</li>
+      <li class="item"><a href = "projects.html">Projects</a></li>
     </ul>
   </div>
 
   <div id = 'links'>
-    <!-- <img src = 'https://images.unsplash.com/photo-1528747045269-390fe33c19f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80'> -->
     <h1><strong>GET IN TOUCH</strong></h1>
     <ul>
       <li><i class="fa-brands fa-linkedin"></i>: <a href="www.linkedin.com/in/sanket-munishwar-372607230">www.linkedin.com/in/sanket-munishwar-372607230</a></li>
